--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -7,78 +7,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <title>BattleFRONT</title>
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">BattleFRONT</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Serviços</a>
+                            <a class="nav-link active d-flex justify-content-end" href="#">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Cadastro</a>
+                            <a class="nav-link active d-flex justify-content-end" href="#">Cadastro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Log-in</a>
+                            <a class="nav-link active d-flex justify-content-end" href="#">log-in</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h2>Feito por devs, para devs!</h2>
-        <p>Desafie-se e entre no mundo do desenvolvimento de forma gratuita, com as ferramentas mais utilizadas pelos
-            desenvolvedores na atualidade.</p>
-        <p>Se estiver disposto a aprender mais, também contamos com conteúdos e desafios exclusivos para seu portfólio.
-        </p>
     </header>
 
     <main>
-        <section class="product-cards">
+        <section class="principal mt-5 pt-4">
+            <!--Alteração de margin e padding é aqui-->
+            <h2 class="subtitle">Feito por devs, para devs!</h2>
+            <p class="description">Desafie-se e entre no mundo do desenvolvimento de forma gratuita, com as ferramentas
+                mais utilizadas
+                pelos
+                desenvolvedores na atualidade.</p>
+            <p class="description">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios
+                exclusivos para seu
+                portfólio.
+            </p>
+        </section>
+        <section class="product-cards mt-5 mb-2">
+            <!--Alteração de margin e padding é aqui-->
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="..."> <!-- vamos usar imagens?-->
-                        <div
-                            class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-5 bg-body rounded">
-                            <!-- mb-5 modifica o tamanho do elemento em relação ao abaixo dele-->
-                            <h5 class="card-title">Gratuito</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida
+                    <div
+                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
+                        <img src="../img/appDevelopment.png" class="card-img-top image fluid" alt="App Development">
+                        <div class="card pt-4">
+                            <h4 class="card-title text-center">Gratuito</h4>
+                            <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Nam gravida
                                 congue urna vitae varius. Duis venenatis dignissim libero.</p>
                             <a href="#" class="btn btn-secondary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="..."> <!-- vamos usar imagens?-->
-                        <div
-                            class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-5 bg-body rounded">
-                            <!-- mb-5 modifica o tamanho do elemento em relação ao abaixo dele-->
-                            <h5 class="card-title">Intermediário</h5>
-                            <p class="card-text">Pellentesque placerat finibus ullamcorper. Maecenas scelerisque ipsum
+                    <div
+                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
+                        <img src="../img/onlineEducation.png" class="card-img-top image fluid" alt="Studying">
+                        <div class="card pt-4">
+                            <h4 class="card-title text-center">Intermediário</h4>
+                            <p class="card-text text-center">Pellentesque placerat finibus ullamcorper. Maecenas
+                                scelerisque ipsum
                                 ante, lacinia aliquam turpis facilisis a. Aliquam erat volutpat.</p>
                             <a href="#" class="btn btn-secondary">Escolher</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="..."> <!-- vamos usar imagens?-->
-                        <div
-                            class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-5 bg-body rounded">
-                            <!-- mb-5 modifica o tamanho do elemento em relação ao abaixo dele-->
-                            <h5 class="card-title">Premium</h5>
-                            <p class="card-text">Proin tincidunt lacus egestas libero pulvinar, vel tristique justo
+                    <div
+                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
+                        <img src="../img/coding.png" class="card-img-top image fluid" alt="Coding">
+                        <div class="card pt-4">
+                            <h4 class="card-title text-center">Premium</h4>
+                            <p class="card-text text-center">Proin tincidunt lacus egestas libero pulvinar, vel
+                                tristique justo
                                 suscipit. Donec at magna finibus, sollicitudin turpis eu, vulputate orci.</p>
                             <a href="#" class="btn btn-secondary">Escolher</a>
                         </div>
@@ -89,32 +100,29 @@
     </main>
 
     <footer>
-        <section class="navbar-contact">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">BattleFRONT &#169 - 2022 - all rights reserved</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Recuperação de Senha</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Contato</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Quem somos nós</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light mt-2>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active d-flex justify-content-end" href="#">Recuperação de Senha</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active d-flex justify-content-end" href="#">Contato</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active d-flex justify-content-end" href="#">Quem somos nós</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </section>
+            </div>
+        </nav>
     </footer>
-
 </body>
 
 </html>
