Update: Os dois botões responsivos estavam sendo ativados juntos, corrigido.

--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -103,11 +103,11 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light mt-2>
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active d-flex justify-content-end" href="#">Recuperação de Senha</a>
