--- a/assets/view/html/produtos.html
+++ b/assets/view/html/produtos.html
@@ -2,127 +2,132 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
-    <title>BattleFRONT</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <title>BattleFRONT</title>
 </head>
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">BattleFRONT</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" 
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">Serviços</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">Cadastro</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">log-in</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <div class="container-fluid ms-3">
+        <a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
+        <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNavAltMarkup">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <section class="principal mt-5 pt-4">
-            <!--Alteração de margin e padding é aqui-->
-            <h2 class="subtitle">Feito por devs, para devs!</h2>
-            <p class="description">Desafie-se e entre no mundo do desenvolvimento de forma gratuita, com as ferramentas
-                mais utilizadas
-                pelos
-                desenvolvedores na atualidade.</p>
-            <p class="description">Se estiver disposto a aprender mais, também contamos com conteúdos e desafios
-                exclusivos para seu
-                portfólio.
-            </p>
-        </section>
-        <section class="product-cards mt-5 mb-2">
-            <!--Alteração de margin e padding é aqui-->
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div
-                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
-                        <img src="../img/appDevelopment.png" class="card-img-top image fluid" alt="App Development">
-                        <div class="card pt-4">
-                            <h4 class="card-title text-center">Gratuito</h4>
-                            <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Nam gravida
-                                congue urna vitae varius. Duis venenatis dignissim libero.</p>
-                            <a href="#" class="btn btn-secondary">Escolher</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div
-                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
-                        <img src="../img/onlineEducation.png" class="card-img-top image fluid" alt="Studying">
-                        <div class="card pt-4">
-                            <h4 class="card-title text-center">Intermediário</h4>
-                            <p class="card-text text-center">Pellentesque placerat finibus ullamcorper. Maecenas
-                                scelerisque ipsum
-                                ante, lacinia aliquam turpis facilisis a. Aliquam erat volutpat.</p>
-                            <a href="#" class="btn btn-secondary">Escolher</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div
-                        class="card-body border border-secondary border border-2 rounded-1 shadow p-3 mb-0 bg-body rounded">
-                        <img src="../img/coding.png" class="card-img-top image fluid" alt="Coding">
-                        <div class="card pt-4">
-                            <h4 class="card-title text-center">Premium</h4>
-                            <p class="card-text text-center">Proin tincidunt lacus egestas libero pulvinar, vel
-                                tristique justo
-                                suscipit. Donec at magna finibus, sollicitudin turpis eu, vulputate orci.</p>
-                            <a href="#" class="btn btn-secondary">Escolher</a>
-                        </div>
-                    </div>
-                </div>
+  <main>
+    <section class="principal mt-5 pt-4 text-center">
+      <!--Alteração de margin e padding é aqui-->
+      <h2 class="subtitle p-4 font-monospace fw-bold text-decoration-underline fs-1">Conheça nossos planos:
+      </h2>
+      <p class="description fs-5">Para utilizar a plataforma é necessário selecionar um dos planos abaixo e realizar o
+        cadastro. Somente assim podemos personalizar o seu plano de criação.</p>
+      <p class="description fs-5">Contamos com uma excelente interface, desenvolvida especialmente para o dev que está
+        começando agora.
+        <p class="description fs-5">Como?
+          <p class="description fs-5">O nosso modelo de estudos identifica os erros semânticos e modifica sua cor, a fim
+            de que você possa analisar.</p>
+          <p class="description fs-5">Junto a isso, o próprio sistema fornece sugestões se você estiver com dificuldades
+            em seguir as instruções do exercício.</p>
+        </p>
+    </section>
+    <section class="product-cards mt-5 mb-2">
+      <!--Alteração de margin e padding é aqui-->
+      <div class="row row-cols-1 row-cols-md-3 g-4 m-4">
+        <article class="col">
+          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+            <img src="../img/appDevelopment.png" class="card-img-top image fluid" alt="App Development">
+            <div class="card p-2">
+              <h4 class="card-title text-center">Gratuito</h4>
+              <p class="card-text text-center">Desafios de Flexbox + Landing pages em HTML e CSS puros + Lógica de
+                programação.</p>
+              <p class="card-text text-center">Uma ótima escolha para quem está começando. Contém: 5 projetos para te
+                ajudar nesse início + 3 e-books.</p>
+              <a href="#" class="btn btn-secondary">Escolher</a>
             </div>
-        </section>
-    </main>
+          </div>
+        </article>
+        <article class="col">
+          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+            <img src="../img/onlineEducation.png" class="card-img-top image fluid" alt="Studying">
+            <div class="card p-2">
 
-    <footer>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mt-2>
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">Recuperação de Senha</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">Contato</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active d-flex justify-content-end" href="#">Quem somos nós</a>
-                        </li>
-                    </ul>
-                </div>
+              <h4 class="card-title text-center">Intermediário</h4>
+              <p class="card-text text-center">Desafios de JavaScript + Loops + Funções + Imagens animadas</p>
+              <p class="card-text text-center">Recomendado para quem já está um pouco familiarizado com Lógica de
+                Programação. Contém: 3 projetos exclusivos para seu portfólio + 2 e-books.
+              </p>
+              <a href="#" class="btn btn-secondary">Escolher</a>
+              
             </div>
-        </nav>
-    </footer>
+          </div>
+        </article>
+        <article class="col">
+          <div class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
+            <img src="../img/coding.png" class="card-img-top image fluid" alt="Coding">
+            <div class="card p-2">
+              <h4 class="card-title text-center">Premium</h4>
+              <p class="card-text text-center">Desafios avançados de JavaScript + Consumo de API's + Manipulação de
+                Objetos + jQuerry + DOM </p>
+              <p class="card-text text-center">Parabéns, você tem sangue de barata! Nessa opção, contamos com 10
+                projetos que englobam todos os tópicos abordados + 5 e-books.</p>
+              <a href="#" class="btn btn-secondary">Escolher</a>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+      <div class="container-fluid ms-2">
+        <a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
+        <button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end me-3" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Recuperação de Senha</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Quem somos nós</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </footer>
 </body>
 
 </html>
