--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../css/style.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -15,7 +16,7 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			<div class="container-fluid ms-3">
 				<a class="navbar-brand font-monospace fw-bold" href="#">BattleFRONT</a>
 				<button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse"
@@ -42,63 +43,55 @@
 
 	<main>
 		<form>
-			<label for="nomesobrenome">Nome e sobrenome</label>
-			<input type="text" id="nomesobrenome" class="input-padrao" required>
-
-			<label for="email">Email</label>
-			<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
-
-			<label for="telefone">Telefone</label>
-			<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
-
-			<label for="mensagem">Mensagem</label>
-			<textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
-
-			<fieldset>
-				<legend>Como prefere o nosso contato?</legend>
-				<label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">
-					Email</label>
-
-				<label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">
-					Telefone</label>
-
-				<label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp"
-						checked> WhatsApp</label>
+			<fieldset class="container border border-dark rounded shadow p-5 mb-4 mt-5 bg-white rounded" id="fieldset">
+				<h5>Por favor, para entrar em contato, nos informe os dados a seguir:</h5>
+				<form class="form-row justify">
+					<div class="col-sm-5 my-3">
+						<label class="sr-only" for="inlineFormInputName">Nome</label>
+						<input type="text" class="form-control shadow-sm rounded" id="inlineFormInputName" required
+							placeholder="Fulano">
+					</div>
+					<div class="col-sm-5 my-3">
+						<label class="sr-only" for="inlineFormInputTel">Telefone</label>
+						<input type="tel" class="form-control shadow-sm rounded" id="inlineFormInputTel" required
+							placeholder="(xx) xxxxx-xxxx">
+					</div>
+					<div class="col-sm-5 my-3">
+						<label class="sr-only" for="exampleFormControlInput1">Endereço de email</label>
+						<input type="email" class="form-control shadow-sm rounded" id="inlineFormInputEmail1" required
+							placeholder="nome@exemplo.com">
+					</div>
+					<div class="col-sm-5 my-3">
+						<label for="exampleFormControlSelect1">Selecione o motivo do contato?</label>
+						<select class="form-control shadow-sm rounded" id="exampleFormControlSelect">
+							<option>Produtos</option>
+							<option>Assinatura</option>
+							<option>Críticas</option>
+							<option>Sugestões</option>
+							<option>Outros</option>
+						</select>
+						<div class="col-sm-15 my-3">
+							<label for="exampleFormControlTextarea1">Conte-nos detalhadamente qual a razão do contato</label>
+							<textarea class="form-control shadow-sm rounded" id="exampleFormControlTextarea"
+								rows="5"></textarea>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="exampleFormControlFile1">Selecione um arquivo</label>
+						<input type="file" class="form-control-file" id="exampleFormControlFile">
+					</div>
+					<div class="col-sm-15 my-3">
+						<button type="submit" class="btn btn-secondary shadow-sm rounded">Enviar</button>
+					</div>
+				</form>
 			</fieldset>
 
-			<fieldset>
-				<legend>Qual horário prefere ser atendido?</legend>
-				<select>
-					<option>Manhã</option>
-					<option>Tarde</option>
-					<option>Noite</option>
-				</select>
 			</fieldset>
-
-			<label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por
-				email?</label>
 		</form>
-
-		<form class="ms-4">
-			<div class="form-group">
-			  <label for="exampleInputEmail1">Endereço de email</label>
-			  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-			  <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
-			</div>
-			<div class="form-group">
-			  <label for="exampleInputPassword1">Senha</label>
-			  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-			</div>
-			<div class="form-group form-check">
-			  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-			  <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
-			</div>
-			<button type="submit" class="btn btn-secondary">Enviar</button>
-		  </form>
 	</main>
 
-	<footer>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+	<footer class="">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid ms-3">
 				<a class="navbar-brand font-monospace" href="#">BattleFRONT &#169; - 2022 - all rights reserved</a>
 				<button class="navbar-toggler me-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
