--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -54,7 +54,132 @@
       </nav>
     </header>
 
-    <main >
+    <main class="container pt-5 mt-5 pagination justify-content-center">
+      <section>
+        <div class="col-md-9 col-sm9">
+          <h3 class="text-center">Cadastrar Usuário:</h3>
+          <form name="formUsuarios" method="post" action="" onsubmit=""></form><br>
+
+          <label for="">Nome:</label><br />
+          <input
+            type="text"
+            name="txtNome"
+            class="form-control"
+            size="70"
+            maxlength="70"
+            placeholder="Digite seu nome completo"
+          /><br />
+
+          <label for="">E-mail:</label><br />
+          <input
+            type="email"
+            name="txtEmail"
+            class="form-control"
+            size="50"
+            maxlength="50"
+            aria-describedby="emailHelp"
+            placeholder="nome@exemplo.com"
+          /><br />
+
+          <label for="">Senha:</label><br />
+          <input
+            type="password"
+            name="txtSenha1"
+            class="form-control" placeholder="Digite uma senha"
+            size="30"
+            maxlength="30"
+          /><br />
+
+          <label for="">Confirmação de senha:</label><br />
+          <input
+            type="password"
+            name="txtSenha2"
+            class="form-control" placeholder="Repita a senha"
+            size="30"
+            maxlength="30"
+          /><br />
+
+          <label for="">RG:</label><br />
+          <input
+            type="text"
+            name="txtRG"
+            class="form-control"
+            size="15"
+            maxlength="15"
+            placeholder="Digite somente números"
+          /><br />
+
+          <label for="">CEP:</label><br />
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Digite somente números">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary btn-outline-success" type="button" id="button-addon2">Buscar</button>
+            </div>
+          </div>
+
+          <label for="">Rua:</label><br />
+          <input
+            type="text"
+            name="txtRua"
+            class="form-control"
+            size="70"
+            maxlength="70"
+          /><br />
+
+          <label for="">Número:</label><br />
+          <input
+            type="text"
+            name="txtNumero"
+            class="form-control"
+            size="10"
+            maxlength="10"
+          /><br />
+
+          <label for="">Complemento:</label><br />
+          <input
+            type="text"
+            name="txtComplemento"
+            class="form-control"
+            size="30"
+            maxlength="30"
+          /><br />
+
+          <label for="">Bairro:</label><br />
+          <input
+            type="text"
+            name="txtBairro"
+            class="form-control"
+            size="40"
+            maxlength="40"
+          /><br />
+
+          <label for="">Cidade:</label><br />
+          <input
+            type="text"
+            name="txtCidade"
+            class="form-control"
+            size="40"
+            maxlength="40"
+          /><br />
+
+          <label for="">Estado:</label><br />
+          <input
+            type="text"
+            name="txtCidade"
+            class="form-control"
+            size="2"
+            maxlength="2"
+          /><br />
+
+          <button
+            type="submit"
+            name="btnSubmitUsuario"
+            class="btn btn-primary w-100 my-4"
+          >
+            Cadastrar
+          </button><br>
+        </div>
+      </section>
     </main>
 
     <footer>
