--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -100,10 +100,11 @@
     </main>
 
     <footer class="fixed-bottom bg-light p-3 text-center">
-
       <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
         >
       </p>
+    </footer>
+
   </body>
 
   <script
