--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -177,52 +177,15 @@
             class="btn btn-primary w-100 my-4"
           >
             Cadastrar
-          </button><br>
+          </button><br><br><br><br>
         </div>
       </section>
     </main>
 
-    <footer>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light mt-2">
-        <section class="container-fluid">
-          <a class="navbar-brand" href="#"
-            >BattleFRONT &#169; - 2022 - all rights reserved</a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Recuperação de Senha</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Contato</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Quem somos nós</a
-                >
-              </li>
-            </ul>
-          </div>
-        </section>
-      </nav>
+    <footer class="fixed-bottom bg-light p-3 text-center">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
+        >
+      </p>
     </footer>
   </body>
 
