--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -65,6 +65,7 @@
             type="text"
             name="txtNome"
             class="form-control"
+            id = "nome"
             size="70"
             maxlength="70"
             placeholder="Digite seu nome completo"
@@ -75,6 +76,7 @@
             type="email"
             name="txtEmail"
             class="form-control"
+            id="email"
             size="50"
             maxlength="50"
             aria-describedby="emailHelp"
@@ -85,7 +87,9 @@
           <input
             type="password"
             name="txtSenha1"
-            class="form-control" placeholder="Digite uma senha"
+            class="form-control" 
+            id="senha"
+            placeholder="Digite uma senha"
             size="30"
             maxlength="30"
           /><br />
@@ -94,7 +98,9 @@
           <input
             type="password"
             name="txtSenha2"
-            class="form-control" placeholder="Repita a senha"
+            class="form-control" 
+            id="senhaRepeat"
+            placeholder="Repita a senha"
             size="30"
             maxlength="30"
           /><br />
@@ -104,6 +110,7 @@
             type="text"
             name="txtRG"
             class="form-control"
+            id="rg"
             size="15"
             maxlength="15"
             placeholder="Digite somente números"
@@ -111,7 +118,7 @@
 
           <label for="">CEP:</label><br />
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Digite somente números">
+            <input type="text" class="form-control" id="cep" placeholder="Digite somente números">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary btn-outline-success" type="button" id="button-addon2">Buscar</button>
             </div>
@@ -122,6 +129,7 @@
             type="text"
             name="txtRua"
             class="form-control"
+            id="rua"
             size="70"
             maxlength="70"
           /><br />
@@ -131,6 +139,7 @@
             type="text"
             name="txtNumero"
             class="form-control"
+            id="numero"
             size="10"
             maxlength="10"
           /><br />
@@ -140,6 +149,7 @@
             type="text"
             name="txtComplemento"
             class="form-control"
+            id="complemento"
             size="30"
             maxlength="30"
           /><br />
@@ -149,6 +159,7 @@
             type="text"
             name="txtBairro"
             class="form-control"
+            id="bairro"
             size="40"
             maxlength="40"
           /><br />
@@ -158,6 +169,7 @@
             type="text"
             name="txtCidade"
             class="form-control"
+            id="cidade"
             size="40"
             maxlength="40"
           /><br />
@@ -167,6 +179,7 @@
             type="text"
             name="txtCidade"
             class="form-control"
+            id="estado"
             size="2"
             maxlength="2"
           /><br />
@@ -175,6 +188,7 @@
             type="submit"
             name="btnSubmitUsuario"
             class="btn btn-primary w-100 my-4"
+            id="btn-cadastro"
           >
             Cadastrar
           </button><br>
