--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -245,4 +245,9 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="../../models/js/cepModel.js"></script>
+  <script src="../js/manipuladorDom.js"></script>
+  <script src="../js/cepView.js"></script>
+  <script src="../../controller/js/cepController.js"></script>
 </html>
