update: change id from cep "buscar" in Cadastro.html

--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -120,7 +120,7 @@
           <div class="input-group mb-3">
             <input type="text" class="form-control" id="cep" placeholder="Digite somente números">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary btn-outline-success" type="button" id="button-addon2">Buscar</button>
+              <button class="btn btn-outline-secondary btn-outline-success" type="button" id="btn-cep">Buscar</button>
             </div>
           </div>
 
