feat: add id's in login.html's inputs; add link for recuperacaoSenha.html in login.html and add link for cadastro.html in recuperacaoSenha.html

--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -68,6 +68,7 @@
             type="email"
             name="txtUsuario"
             class="form-control text-center"
+            id="email"
             size="50"
             maxlength="50"
             aria-describedby="emailHelp"
@@ -79,6 +80,7 @@
             type="password"
             name="txtSenha"
             class="form-control text-center"
+            id="senha"
             size="30"
             maxlength="30"
             placeholder="Digite sua senha"
@@ -88,11 +90,12 @@
           type="submit"
           name="btnSubmitUsuario"
           class="btn btn-primary w-50"
+          id="btn-login"
           >
           Entrar
           </button>
           
-          <a href="#" id="" class="text-primary p-3">Esqueceu sua senha?</a
+          <a href="./RecuperacaoSenha.html" id="" class="text-primary p-3">Esqueceu sua senha?</a
           ><br /><br />
 
         </div>
