--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -81,7 +81,7 @@
           >
             Enviar</button>
 
-          <a href="#" id="" class="text-primary p-3">Cadastrar Usuário</a>
+          <a href="./Cadastro.html" id="" class="text-primary p-3">Cadastrar Usuário</a>
         </div>
       </section>
     </main>
