create emailController.js, update emailModel.js and add both to cadastro.html

--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -208,9 +208,11 @@
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="../../models/js/cepModel.js"></script>
+    <script src="../../models/js/emailModel.js"></script>
     <script src="../js/manipuladorDom.js"></script>
     <script src="../js/cepView.js"></script>
     <script src="../../controller/js/cepController.js"></script>
+    <script src="../../controller/js/emailControler.js"></script>
 
   </body>
 
