--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -114,6 +114,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="../../models/js/emailModel.js"></script>
+    <script src="../../view/js/manipuladorDom.js"></script>
+    <script src="../../controller/js/inputController.js"></script>
   </body>
 
 </html>
