feat: add max-length in cep input in cadastro.js, add id in email and scripts in recuperacaoSenha.html

--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -118,7 +118,7 @@
 
           <label for="">CEP:</label><br />
           <div class="input-group mb-3">
-            <input type="text" class="form-control" id="cep" placeholder="Digite somente números">
+            <input type="text" class="form-control" id="cep" placeholder="Digite somente números" maxlength="8">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary btn-outline-success" type="button" id="btn-cep">Buscar</button>
             </div>
