--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -68,6 +68,7 @@
             type="email"
             name="txtUsuario"
             class="form-control text-center"
+            id="email"
             size="50"
             maxlength="50"
             aria-describedby="emailHelp"
@@ -78,6 +79,7 @@
             type="submit"
             name="btnSubmitUsuario"
             class="btn btn-primary w-50"
+            id="btn-recuperaSenha"
           >
             Enviar</button>
 
@@ -99,6 +101,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="../../models/js/emailModel.js"></script>
+    <script src="../../view/js/manipuladorDom.js"></script>
+    <script src="../../controller/js/inputController.js"></script>
     
   </body>
 
