Update: "add new items on contato and index, was also modified footer and header on all pages"

--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -21,13 +21,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-end" href="#">Serviços</a>
+              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-end" href="#">Cadastro</a>
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active d-flex justify-content-end" href="#">Login</a>
+              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
             </li>
           </ul>
         </div>
