--- a/assets/view/html/contato.html
+++ b/assets/view/html/contato.html
@@ -58,9 +58,9 @@
 						class="card-body border border-secondary border border-4 rounded-1 shadow p-3 mb-0 bg-body rounded">
 						<img src="" class="card-img-top image fluid" alt="">
 						<div class="card p-2">
-							<h4 class="card-title text-center">Victor Del Duca</h4>
+							<h4 class="card-title text-center">Victor Del' Duca</h4>
 							<a href="https://github.com/Vitor-DelDuca" class="btn" role="button">Github</a>
-							<a href="" class="btn" role="button">LinkedIn</a>
+							<a href="https://www.linkedin.com/in/vitor-del-duca-gestao-programacao-treinamento/" class="btn" role="button">LinkedIn</a>
 						</div>
 					</div>
 				</article>
@@ -71,7 +71,7 @@
 						<div class="card p-2">
 							<h4 class="card-title text-center">Hadassa Moraes</h4>
 							<a href="https://github.com/hadmoraes" class="btn" role="button">Github</a>
-							<a href="" class="btn" role="button">LinkedIn</a>
+							<a href="https://www.linkedin.com/in/hadassa-moraes-5a6712230/" class="btn" role="button">LinkedIn</a>
 						</div>
 					</div>
 				</article>
@@ -82,7 +82,7 @@
 						<div class="card p-2">
 							<h4 class="card-title text-center">Ytallo Bruno</h4>
 							<a href="https://github.com/ytallobruno" class="btn" role="button">Github</a>
-							<a href="" class="btn" role="button">LinkedIn</a>
+							<a href="https://www.linkedin.com/in/ytallobruno/" class="btn" role="button">LinkedIn</a>
 						</div>
 					</div>
 				</article>
