--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -1,117 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <title>BattleFRONT - Login</title>
-  </head>
 
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
-        <section class="container-fluid">
-          <a class="navbar-brand" href="#">BattleFRONT</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNavAltMarkup"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Serviços</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Cadastro</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
-                  >Login</a
-                >
-              </li>
-            </ul>
-          </div>
-        </section>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <title>BattleFRONT - Login</title>
+</head>
 
-    <main class="container pt-5 mt-5 pagination justify-content-center">
-      <section>
-        <div class="col-md-11 col-sm11">
-          <h3 class="text-center">Login:</h3>
-          <form name="formLogin" method="post" action="" onsubmit=""></form>
-
-          <p></p>
-
-          <label>Usuário:</label><br />
-          <input
-            type="email"
-            name="txtUsuario"
-            class="form-control text-center"
-            id="email"
-            size="50"
-            maxlength="50"
-            aria-describedby="emailHelp"
-            placeholder="nome@exemplo.com"
-          /><br />
-
-          <label>Senha:</label><br />
-          <input
-            type="password"
-            name="txtSenha"
-            class="form-control text-center"
-            id="senha"
-            size="30"
-            maxlength="30"
-            placeholder="Digite sua senha"
-          /><br />
-          
-          <button
-          type="submit"
-          name="btnSubmitUsuario"
-          class="btn btn-primary w-50"
-          id="btn-login"
-          >
-          Entrar
-          </button>
-          
-          <a href="./RecuperacaoSenha.html" id="" class="text-primary p-3">Esqueceu sua senha?</a
-          ><br /><br />
-
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <section class="container-fluid">
+        <a class="navbar-brand" href="#">BattleFRONT</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active d-flex justify-content-center" href="#">log-in</a>
+            </li>
+            </li>
+          </ul>
         </div>
       </section>
-    </main>
+    </nav>
+  </header>
 
-    <footer class="fixed-bottom bg-light p-3 text-center">
+  <main class="container pt-5 mt-5 pagination justify-content-center">
+    <section>
+      <div class="col-md-11 col-sm11">
+        <h3 class="text-center">Login:</h3>
+        <form name="formLogin" method="post" action="" onsubmit=""></form>
 
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"
-      ></script>
-  </body>
+        <p></p>
+
+        <label>Usuário:</label><br />
+        <input type="email" name="txtUsuario" class="form-control text-center" id="email" size="50" maxlength="50"
+          aria-describedby="emailHelp" placeholder="nome@exemplo.com" /><br />
+
+        <label>Senha:</label><br />
+        <input type="password" name="txtSenha" class="form-control text-center" id="senha" size="30" maxlength="30"
+          placeholder="Digite sua senha" /><br />
+
+        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-login">
+          Entrar
+        </button>
+
+        <a href="./RecuperacaoSenha.html" id="" class="text-primary p-3">Esqueceu sua senha?</a><br /><br />
+
+      </div>
+    </section>
+  </main>
+
+  <footer class="fixed-bottom bg-light p-3 text-center">
+
+    <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a>
+    </p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+</body>
 
 </html>
