update:  indent and classes

--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>BattleFRONT - Login</title>
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
         <section class="container-fluid">
-          <a class="navbar-brand" href="#">BattleFRONT</a>
+          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
+            <img class="logo-barranav" src="../img/img_logo.png" alt="Logo BattleFRONT">
+            BattleFRONT</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,17 +38,26 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Login.html"
                   >Login</a
                 >
               </li>
@@ -55,58 +67,51 @@
       </nav>
     </header>
 
-    <main class="container pt-5 mt-5 pagination justify-content-center">
-      <section>
-        <div class="col-md-11 col-sm11">
-          <h3 class="text-center">Login:</h3>
-          <form name="formLogin" method="post" action="" onsubmit=""></form>
+    <main class="container h-100 d-flex align-items-center justify-content-center">
+      <section class="col-10 col-xl-4 col-lg-5 col-md-6 col-sm-8">
+        <h3 class="text-center">Login:</h3>
+        <form name="formLogin" method="post" action="" onsubmit=""></form>
 
-          <p></p>
+        <label class="espaco-label">Usuário:</label>
+        <input
+          type="email"
+          name="txtUsuario"
+          class="form-control text-center"
+          id="email"
+          size="50"
+          maxlength="50"
+          aria-describedby="emailHelp"
+          placeholder="nome@exemplo.com"
+        />
 
-          <label>Usuário:</label><br />
-          <input
-            type="email"
-            name="txtUsuario"
-            class="form-control text-center"
-            id="email"
-            size="50"
-            maxlength="50"
-            aria-describedby="emailHelp"
-            placeholder="nome@exemplo.com"
-          /><br />
+        <label class="espaco-label">Senha:</label>
+        <input
+          type="password"
+          name="txtSenha"
+          class="form-control text-center mb-3"
+          id="senha"
+          size="30"
+          maxlength="30"
+          placeholder="Digite sua senha"
+        />
 
-          <label>Senha:</label><br />
-          <input
-            type="password"
-            name="txtSenha"
-            class="form-control text-center"
-            id="senha"
-            size="30"
-            maxlength="30"
-            placeholder="Digite sua senha"
-          /><br />
-          
-          <button
+        <button
           type="submit"
           name="btnSubmitUsuario"
-          class="btn btn-primary w-50"
+          class="btn w-50 botao-cor-especial"
           id="btn-login"
-          >
+        >
           Entrar
-          </button>
+        </button>
 
-          <a href="./RecuperacaoSenha.html" id="" class="text-primary p-3">Esqueceu sua senha?</a
-          ><br /><br />
-
-        </div>
+        <a href="./RecuperacaoSenha.html" id="" class="cor-link ms-1 espaco-link"
+          >Esqueceu sua senha?</a
+        >
       </section>
     </main>
 
     <footer class="fixed-bottom bg-light p-3 text-center">
-
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -114,5 +119,4 @@
       crossorigin="anonymous"
     ></script>
   </body>
-
 </html>
