--- a/assets/view/html/Cadastro.html
+++ b/assets/view/html/Cadastro.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>BattleFRONT - Cadastro</title>
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
         <section class="container-fluid">
-          <a class="navbar-brand" href="#">BattleFRONT</a>
+          <a class="navbar-brand estilo-link-barranav" href="../../../index.html">BattleFRONT</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -34,17 +36,26 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Login.html"
                   >Login</a
                 >
               </li>
@@ -54,160 +65,166 @@
       </nav>
     </header>
 
-    <main class="container pt-5 mt-5 pagination justify-content-center">
-      <section>
-        <div class="col-md-9 col-sm9">
-          <h3 class="text-center">Cadastrar Usuário:</h3>
-          <form name="formUsuarios" method="post" action="" onsubmit=""></form><br>
+    <main class="container pt-4 mt-5 d-flex justify-content-center">
+      <section class="col-10 col-xl-4 col-lg-5 col-md-7 col-sm-9">
+        <h3 class="text-center">Cadastrar Usuário:</h3>
+        <form name="formUsuarios" method="post" action="" onsubmit=""></form>
 
-          <label for="">Nome:</label><br />
+        <label class="espaco-label" for="txtNome">Nome:</label>
+        <input
+          type="text"
+          name="txtNome"
+          class="form-control"
+          id="nome"
+          size="70"
+          maxlength="70"
+          placeholder="Digite seu nome completo"
+        />
+
+        <label class="espaco-label" for="txtEmail">E-mail:</label>
+        <input
+          type="email"
+          name="txtEmail"
+          class="form-control"
+          id="email"
+          size="50"
+          maxlength="50"
+          aria-describedby="emailHelp"
+          placeholder="nome@exemplo.com"
+        />
+
+        <label class="espaco-label" for="txtSenha1">Senha:</label>
+        <input
+          type="password"
+          name="txtSenha1"
+          class="form-control"
+          id="senha"
+          size="30"
+          maxlength="30"
+          placeholder="Digite uma senha"
+        />
+
+        <label class="espaco-label" for="txtSenha2">Confirmação de senha:</label>
+        <input
+          type="password"
+          name="txtSenha2"
+          class="form-control"
+          id="senhaRepeat"
+          size="30"
+          maxlength="30"
+          placeholder="Repita a senha"
+        />
+
+        <label class="espaco-label" for="txtRG">RG:</label>
+        <input
+          type="text"
+          name="txtRG"
+          class="form-control"
+          id="rg"
+          size="15"
+          maxlength="15"
+          placeholder="Digite somente números"
+        />
+
+        <label class="espaco-label" for="txtCEP">CEP:</label>
+        <div class="input-group">
           <input
             type="text"
-            name="txtNome"
+            name="txtCEP"
             class="form-control"
-            id="nome"
-            size="70"
-            maxlength="70"
-            placeholder="Digite seu nome completo"
-          /><br />
-
-          <label for="">E-mail:</label><br />
-          <input
-            type="email"
-            name="txtEmail"
-            class="form-control"
-            id="email"
-            size="50"
-            maxlength="50"
-            aria-describedby="emailHelp"
-            placeholder="nome@exemplo.com"
-          /><br />
-
-          <label for="">Senha:</label><br />
-          <input
-            type="password"
-            name="txtSenha1"
-            class="form-control" 
-            id="senha"
-            placeholder="Digite uma senha"
-            size="30"
-            maxlength="30"
-          /><br />
-
-          <label for="">Confirmação de senha:</label><br />
-          <input
-            type="password"
-            name="txtSenha2"
-            class="form-control" 
-            id="senhaRepeat"
-            placeholder="Repita a senha"
-            size="30"
-            maxlength="30"
-          /><br />
-
-          <label for="">RG:</label><br />
-          <input
-            type="text"
-            name="txtRG"
-            class="form-control"
-            id="rg"
-            size="15"
-            maxlength="15"
+            id="cep"
             placeholder="Digite somente números"
-          /><br />
-
-          <label for="">CEP:</label><br />
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" id="cep" placeholder="Digite somente números">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary btn-outline-success" type="button" id="btn-cep">Buscar</button>
-            </div>
+          />
+          <div class="input-group-append">
+            <button
+              class="btn botao-cor-especial"
+              type="button"
+              id="btn-cep"
+            >
+              Buscar
+            </button>
           </div>
-
-          <label for="">Rua:</label><br />
-          <input
-            type="text"
-            name="txtRua"
-            class="form-control"
-            id="rua"
-            size="70"
-            maxlength="70"
-          /><br />
-
-          <label for="">Número:</label><br />
-          <input
-            type="text"
-            name="txtNumero"
-            class="form-control"
-            id="numero"
-            size="10"
-            maxlength="10"
-          /><br />
-
-          <label for="">Complemento:</label><br />
-          <input
-            type="text"
-            name="txtComplemento"
-            class="form-control"
-            id="complemento"
-            size="30"
-            maxlength="30"
-          /><br />
-
-          <label for="">Bairro:</label><br />
-          <input
-            type="text"
-            name="txtBairro"
-            class="form-control"
-            id="bairro"
-            size="40"
-            maxlength="40"
-          /><br />
-
-          <label for="">Cidade:</label><br />
-          <input
-            type="text"
-            name="txtCidade"
-            class="form-control"
-            id="cidade"
-            size="40"
-            maxlength="40"
-          /><br />
-
-          <label for="">Estado:</label><br />
-          <input
-            type="text"
-            name="txtCidade"
-            class="form-control"
-            id="estado"
-            size="2"
-            maxlength="2"
-          /><br />
-
-          <button
-            type="submit"
-            name="btnSubmitUsuario"
-            class="btn btn-primary w-100 my-4"
-            id="btn-cadastro"
-          >
-            Cadastrar
-          </button><br><br><br><br>
         </div>
+
+        <label class="espaco-label" for="txtRua">Rua:</label>
+        <input
+          type="text"
+          name="txtRua"
+          class="form-control"
+          id="rua"
+          size="70"
+          maxlength="70"
+        />
+
+        <label class="espaco-label" for="txtNumero">Número:</label>
+        <input
+          type="text"
+          name="txtNumero"
+          class="form-control"
+          id="numero"
+          size="10"
+          maxlength="10"
+          placeholder="Digite apenas números"
+        />
+
+        <label class="espaco-label" for="txtComplemento">Complemento:</label>
+        <input
+          type="text"
+          name="txtComplemento"
+          class="form-control"
+          id="complemento"
+          size="30"
+          maxlength="30"
+        />
+
+        <label class="espaco-label" for="txtBairro">Bairro:</label>
+        <input
+          type="text"
+          name="txtBairro"
+          class="form-control"
+          id="bairro"
+          size="40"
+          maxlength="40"
+        />
+
+        <label class="espaco-label" for="txtCidade">Cidade:</label>
+        <input
+          type="text"
+          name="txtCidade"
+          class="form-control"
+          id="cidade"
+          size="40"
+          maxlength="40"
+        />
+
+        <label class="espaco-label" for="txtCidade">Estado:</label>
+        <input
+          type="text"
+          name="txtCidade"
+          class="form-control"
+          id="estado"
+          size="2"
+          maxlength="2"
+        />
+
+        <button
+          type="submit"
+          name="btnSubmitUsuario"
+          class="btn w-100 my-3 botao-cor-especial"
+          id="btn-cadastro"
+        >
+          Cadastrar
+        </button>
       </section>
     </main>
 
-    <footer class="fixed-bottom bg-light p-3 text-center">
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
+    <footer class="bg-light p-3 text-center">
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
     <script
-       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-       crossorigin="anonymous"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
     ></script>
   </body>
-
-
 </html>
-
