--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>BattleFRONT - Recuperar Senha</title>
   </head>
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-1">
+      <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
         <section class="container-fluid">
-          <a class="navbar-brand" href="#">BattleFRONT</a>
+          <a class="navbar-brand estilo-link-barranav" href="../../../index.html">BattleFRONT</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,17 +36,26 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Cadastro.html"
                   >Cadastro</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./Login.html"
                   >Login</a
                 >
               </li>
@@ -55,52 +65,43 @@
       </nav>
     </header>
 
-    <main class="container pt-5 mt-5 pagination justify-content-center">
-      <section>
-        <div class="col-md-10 col-sm10">
-          <h3 class="text-center">Recuperar Senha:</h3>
-          <form name="formLogin" method="post" action="" onsubmit=""></form>
+    <main class="container h-100 d-flex align-items-center justify-content-center">
+      <section class="col-10 col-xl-4 col-lg-5 col-md-6 col-sm-8">
+        <h3 class="text-center">Recuperar Senha:</h3>
+        <form name="formLogin" method="post" action="" onsubmit=""></form>
 
-          <br>
+        <label class="espaco-label">E-mail para envio:</label>
+        <input
+          type="email"
+          name="txtUsuario"
+          class="form-control text-center"
+          size="50"
+          maxlength="50"
+          aria-describedby="emailHelp"
+          placeholder="nome@exemplo.com"
+        /><br />
 
-          <label>E-mail para envio:</label><br/>
-          <input
-            type="email"
-            name="txtUsuario"
-            class="form-control text-center"
-            size="50"
-            maxlength="50"
-            aria-describedby="emailHelp"
-            placeholder="nome@exemplo.com"
-          /><br/>
+        <button
+          type="submit"
+          name="btnSubmitUsuario"
+          class="btn w-50 botao-cor-especial"
+        >
+          Enviar
+        </button>
 
-          <button
-            type="submit"
-            name="btnSubmitUsuario"
-            class="btn btn-primary w-50"
-          >
-            Enviar</button>
-
-
-          <a href="./Cadastro.html" id="" class="text-primary p-3">Cadastrar Usuário</a>
-
-        </div>
+        <a href="./Cadastro.html" id="" class="cor-link ms-3 espaco-link"
+          >Cadastrar Usuário</a
+        >
       </section>
     </main>
 
     <footer class="fixed-bottom bg-light p-3 text-center">
-      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a
-        >
-      </p>
+      <p class="m-0"><a> BattleFRONT &#169; - 2022 - all rights reserved</a></p>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    
   </body>
-
-
-
 </html>
