update: html lang, meta, header, main indent

--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../img/img_logo.png" type="image/x-icon" />
     <link
@@ -13,14 +14,24 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>BattleFRONT - Login</title>
   </head>
-
   <body>
+
     <header>
-      <nav class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao">
+      <nav
+        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+      >
         <section class="container-fluid">
-          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
-            <img class="logo-barranav" src="../img/img_logo.png" alt="Logo BattleFRONT">
-            BattleFRONT</a>
+          <a
+            class="navbar-brand texto-barra-navegacao"
+            href="../../../index.html"
+          >
+            <img
+              class="logo-barranav"
+              src="../img/img_logo.png"
+              alt="Logo BattleFRONT"
+            />
+            BattleFRONT</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -38,12 +49,16 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./produtos.html"
                   >Serviços</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active d-flex justify-content-end estilo-link-barranav" href="#"
+                <a
+                  class="nav-link active d-flex justify-content-end estilo-link-barranav"
+                  href="./contato.html"
                   >Contato</a
                 >
               </li>
@@ -67,7 +82,9 @@
       </nav>
     </header>
 
-    <main class="container h-100 d-flex align-items-center justify-content-center">
+    <main
+      class="container h-100 d-flex align-items-center justify-content-center"
+    >
       <section class="col-10 col-xl-4 col-lg-5 col-md-6 col-sm-8">
         <h3 class="text-center">Login:</h3>
         <form name="formLogin" method="post" action="" onsubmit=""></form>
@@ -104,7 +121,10 @@
           Entrar
         </button>
 
-        <a href="./RecuperacaoSenha.html" id="" class="cor-link ms-1 espaco-link"
+        <a
+          href="./RecuperacaoSenha.html"
+          id=""
+          class="cor-link ms-1 espaco-link"
           >Esqueceu sua senha?</a
         >
       </section>
