update: msgController.js and RecuperacaoSenha.html

--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -48,7 +48,7 @@
         <input type="email" name="txtUsuario" class="form-control text-center" id="email" size="50" maxlength="50"
           aria-describedby="emailHelp" placeholder="nome@exemplo.com" /><br />
 
-        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit" disabled>
+        <button type="submit" name="btnSubmitUsuario" class="btn btn-primary w-50" id="btn-submit">
           Enviar</button>
 
 
