update navbar e main grid

--- a/assets/view/html/Login.html
+++ b/assets/view/html/Login.html
@@ -15,16 +15,12 @@
     <title>BattleFRONT - Login</title>
   </head>
   <body>
-
     <header>
       <nav
-        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+        class="navbar navbar-expand-lg navbar-dark fixed-top pt-1 estilo-barra-navegacao"
       >
-        <section class="container-fluid">
-          <a
-            class="navbar-brand texto-barra-navegacao"
-            href="../../../index.html"
-          >
+        <section class="container-fluid ms-3">
+          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
             <img
               class="logo-barranav"
               src="../img/img_logo.png"
@@ -85,7 +81,7 @@
     <main
       class="container h-100 d-flex align-items-center justify-content-center"
     >
-      <section class="col-10 col-xl-4 col-lg-5 col-md-6 col-sm-8">
+      <section class="col-12 col-xxl-4 col-xl-5 col-lg-5 col-md-6 col-sm-8">
         <h3 class="text-center">Login:</h3>
         <form name="formLogin" method="post" action="" onsubmit=""></form>
 
