--- a/assets/view/html/RecuperacaoSenha.html
+++ b/assets/view/html/RecuperacaoSenha.html
@@ -15,16 +15,12 @@
     <title>BattleFRONT - Recuperar Senha</title>
   </head>
   <body>
-
     <header>
       <nav
-        class="navbar navbar-expand-lg fixed-top pt-1 estilo-barra-navegacao"
+        class="navbar navbar-expand-lg navbar-dark fixed-top pt-1 estilo-barra-navegacao"
       >
-        <section class="container-fluid">
-          <a
-            class="navbar-brand texto-barra-navegacao"
-            href="../../../index.html"
-          >
+        <section class="container-fluid ms-3">
+          <a class="navbar-brand texto-barra-navegacao" href="../../../index.html">
             <img
               class="logo-barranav"
               src="../img/img_logo.png"
